Try to fix linking on mobile setting wrong width

--- a/css/index.styl
+++ b/css/index.styl
@@ -4,8 +4,3 @@ body
 
 canvas
   cursor none
-
-#overlay
-  position absolute
-  top 0
-  color red
